# Tempus.

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_DEMO.md  demo_master_showcase.py  demo_pipeline.py  docker-compose.yml  test_crypto.py
.github/workflows/: ci.yml
Agent-Orchestrator/: demo_b2b_integration.py  demo_pipeline.py  langchain_demo.py  tamper_demo.py
Semantic-motor-seeker/: .env.example  .gitignore  LICENSE  OWNERS_MANUAL.md  check_rust.py  docker-compose.test.yml  docker-compose.yml  requirements.txt
Semantic-motor-seeker/app/: __init__.py  config.py  embeddings.py  engine.py  main.py  middleware.py  models.py  parsers.py  service.py  utils.py  vector_store.py
Semantic-motor-seeker/benchmarks/: README.md  benchmark_async_vs_threadpool.py  benchmark_batch_search_formatting.py  benchmark_collection_cache.py  benchmark_delete.py  benchmark_excel_parsing.py  benchmark_get_document.py  benchmark_ingest_blocking.py  benchmark_logging_blocking.py  benchmark_search_reranking.py  perf_benchmark.py
Semantic-motor-seeker/core_rs/: Cargo.toml  pyproject.toml
Semantic-motor-seeker/core_rs/src/: lib.rs
Semantic-motor-seeker/docker/: Dockerfile
Semantic-motor-seeker/tests/: test_refactor.py  test_sanity.py  test_security.py
Tempus-Engine/: LICENSE  mkdocs.yml
Tempus-Engine/docs/: benchmarks.md
Tempus-Engine/tempus-dashboard/: next.config.ts
Tempus-Engine/tempus-node/: README.md
Tempus-Engine/tempus_core/: Cargo.toml
Tempus-Engine/tempus_core/benches/: fee_benchmark.rs
Tempus-Engine/tempus_core/src/: lib.rs
scripts/: tamper_demo.py
(+22 files in other folders)
